<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00c0c0"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formDN"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/custom_frame_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnDangNhapLogin"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/color_gradient"
            android:text="@string/btnDangNhap"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/group"
            app:layout_constraintTop_toBottomOf="@+id/txtQuenMKLogin" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edtMatKhau"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edtTenDangNhapLogin"
            app:layout_constraintStart_toStartOf="@+id/edtTenDangNhapLogin"
            app:layout_constraintTop_toBottomOf="@+id/edtTenDangNhapLogin" />

        <TextView
            android:id="@+id/txtQuenMKLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/txtQuenMK"
            android:textAlignment="textEnd"
            android:textColor="#00BDC4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edtMatKhauLogin"
            app:layout_constraintTop_toBottomOf="@+id/cbHienThiMK" />

        <TextView
            android:id="@+id/txtDangKyTKLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/txtDangKyTK"
            android:textAlignment="textEnd"
            android:textColor="#00BCD4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/txtChuaCoTK"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/btnDangNhapLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnDangNhapLogin" />

        <EditText
            android:id="@+id/edtTenDangNhapLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:background="@drawable/custom_edt_1"
            android:drawableStart="@drawable/ic_baseline_person_24_2"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/hintTenDN"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="45dp"
            android:text="@string/edtTenDangNhap"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtMatKhauLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:background="@drawable/custom_edt_1"
            android:drawableStart="@drawable/ic_baseline_lock_24_2"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/hintMK"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

        </EditText>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="322dp" />

        <CheckBox
            android:id="@+id/cbHienThiMK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#00BCD4"
            android:text="@string/txtHienThiMK"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edtMatKhauLogin"
            app:layout_constraintTop_toBottomOf="@+id/edtMatKhauLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgHinhLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/formDN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logodangnhap2" />

</androidx.constraintlayout.widget.ConstraintLayout>