<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoUserActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="45dp"
        android:text="@string/edtHoTen"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edtEmail"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edtHoVaTenInfo"
        app:layout_constraintStart_toStartOf="@+id/edtHoVaTenInfo"
        app:layout_constraintTop_toBottomOf="@+id/edtHoVaTenInfo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edtSDT"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmailInfo"
        app:layout_constraintStart_toStartOf="@+id/edtEmailInfo"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailInfo" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edtNgaySinh"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edtSDTInfo"
        app:layout_constraintStart_toStartOf="@+id/edtSDTInfo"
        app:layout_constraintTop_toBottomOf="@+id/edtSDTInfo" />

    <TextView
        android:id="@+id/txtGioiTinhInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtGioiTinh"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/txtNgaySinhInfo"
        app:layout_constraintStart_toStartOf="@+id/txtNgaySinhInfo"
        app:layout_constraintTop_toBottomOf="@+id/txtNgaySinhInfo" />

    <EditText
        android:id="@+id/edtHoVaTenInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@drawable/custom_edt_1"
        android:drawableStart="@drawable/ic_baseline_person_24_2"
        android:drawablePadding="2dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:text="@string/edtSonVy"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"/>

    <EditText
        android:id="@+id/edtEmailInfo"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@drawable/custom_edt_1"
        android:backgroundTint="@null"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="2dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:text="@string/edtEmail"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/edtSDTInfo"
        android:autofillHints=""
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_edt_1"
        android:backgroundTint="@null"
        android:drawableStart="@drawable/ic_baseline_call_24"
        android:drawablePadding="2dp"
        android:ems="10"
        android:inputType="number"
        android:padding="8dp"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/txtNgaySinhInfo"
        android:autofillHints=""
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_edt_1"
        android:backgroundTint="@null"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="2dp"
        android:hint="Chọn ngày sinh"
        android:padding="8dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <RadioGroup
        android:id="@+id/radioGroupGioiTinhInfo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_edt_1"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="@+id/txtNgaySinhInfo"
        app:layout_constraintStart_toStartOf="@+id/txtGioiTinhInfo"
        app:layout_constraintTop_toBottomOf="@+id/txtGioiTinhInfo">

        <RadioButton
            android:id="@+id/rdBtnNamInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#00BCD4"
            android:text="@string/rdBtnNam"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdBtnNuInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#00BCD4"
            android:text="@string/rdBtnNu"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>
    <Button
        android:id="@+id/btnLuuThongTinInfo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/color_gradient"
        android:text="@string/btnLuuThongTin"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupGioiTinhInfo"
        app:layout_constraintStart_toStartOf="@+id/radioGroupGioiTinhInfo"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGioiTinhInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>