<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formDK"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/custom_frame_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
        <!---->
        <EditText
            android:id="@+id/edtXacNhanMKRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edt_1"
            android:drawableStart="@drawable/ic_baseline_lock_24_2"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/edtXacNhanMK"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edtMatKhauRegister"
            app:layout_constraintStart_toStartOf="@+id/edtMatKhauRegister"
            app:layout_constraintTop_toBottomOf="@+id/edtMatKhauRegister" />

        <EditText
            android:id="@+id/edtEmailRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/custom_edt_1"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edtTenDangNhapRegister"
            app:layout_constraintStart_toStartOf="@+id/edtTenDangNhapRegister"
            app:layout_constraintTop_toBottomOf="@+id/edtTenDangNhapRegister" />


        <EditText
            android:id="@+id/edtMatKhauRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/custom_edt_1"
            android:drawableStart="@drawable/ic_baseline_lock_24_2"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/edtMatKhau"
            android:inputType="numberPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edtEmailRegister"
            app:layout_constraintStart_toStartOf="@+id/edtEmailRegister"
            app:layout_constraintTop_toBottomOf="@+id/edtEmailRegister" />

        <EditText
            android:id="@+id/edtHoVaTenRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="45dp"
            android:autofillHints=""
            android:background="@drawable/custom_edt_1"
            android:drawableStart="@drawable/ic_baseline_person_24_2"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/edtHoTen"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtTenDangNhapRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/custom_edt_1"
            android:drawableStart="@drawable/ic_baseline_person_24_2"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/edtTenDangNhap"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edtHoVaTenRegister"
            app:layout_constraintStart_toStartOf="@+id/edtHoVaTenRegister"
            app:layout_constraintTop_toBottomOf="@+id/edtHoVaTenRegister" />


        <Button
            android:id="@+id/btnDangKyRegister"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_marginTop="16dp"
            android:background="@drawable/color_gradient"
            android:text="@string/btnDangKy"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/edtXacNhanMKRegister"
            app:layout_constraintStart_toStartOf="@+id/edtXacNhanMKRegister"
            app:layout_constraintTop_toBottomOf="@+id/edtXacNhanMKRegister" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/txtDaCoTK"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/btnDangKyRegister"
            app:layout_constraintTop_toBottomOf="@+id/btnDangKyRegister" />

        <TextView
            android:id="@+id/txtDangNhapRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/txtDNN"
            android:textAlignment="textEnd"
            android:textColor="#00BCD4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgDangKy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/formDK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosach" />


</androidx.constraintlayout.widget.ConstraintLayout>