<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e5e5e5"
    tools:context=".AccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formImageCustomer"
        android:layout_width="match_parent"
        android:layout_height="140dp"

        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_img_info_user"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_24_2" />

        <TextView
            android:id="@+id/txtTenDNAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/edtTenDangNhap"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSDTAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/edtSDT"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/txtTenDNAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formInfoCustomer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/custom_frame_account"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formImageCustomer">

        <Button
            android:id="@+id/btnThongTinCNAccount"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:text="@string/btnInfoUserThongTin"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDiaChiGHAccount"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:text="@string/btnInfoUserDiaChi"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnThongTinCNAccount" />

        <Button
            android:id="@+id/btnQuanLyDHAccount"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:text="@string/btnInfoUserDonHang"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDiaChiGHAccount" />

        <Button
            android:id="@+id/btnDangXuat"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:text="@string/btnInfoUserDangXuat"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnQuanLyDHAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>