<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="151dp"
        android:background="@color/white"
        android:contentDescription="@null"
        android:src="@drawable/logosach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/logosach" />

    <EditText
        android:id="@+id/edtQuenMK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:autofillHints=""
        android:background="@drawable/custom_edt_1"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="2dp"
        android:ems="10"
        android:hint="@string/edtEmail"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuenMKLogin" />

    <Button
        android:id="@+id/btnQuenMK"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/color_gradient"
        android:text="@string/txtBtnQuenMK"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/edtQuenMK"
        app:layout_constraintStart_toStartOf="@+id/edtQuenMK"
        app:layout_constraintTop_toBottomOf="@+id/edtQuenMK" />

    <TextView
        android:id="@+id/txtQuenMKLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtQuenMK1"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>